[package]
name = "rust-threeq"
version = "0.1.0"
authors = ["simon-fu <simonok@139.com>"]
edition = "2018"

# [[bin]]
# name = "rbench"
# test = false
# bench = false

# [[bin]]
# name = "rbroker"
# test = false
# bench = false

[[bench]]
name = "bench-async"
harness = false
path = "benches/bench-async.rs"

[[bench]]
name = "criterion"
harness = false
path = "benches/criterion.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.8.1", features = ["full"] }
tokio-stream = { version = "^0.1.7", features = ["sync"] }
bytes = "^1.0.1"
tracing = { version = "^0.1.26", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = "^0.2.19"
clap = "=3.0.0-beta.2"
ntex-mqtt = "^0.6.9"
mqttbytes="^0.4.0" 
futures="^0.3.15"
pretty_assertions = "^0.7.2" # for tbytes
num_enum = "^0.5.2"
ansi_term= "^0.12.1"
thiserror = "^1.0.26"
config = { version = "^0.11.0", features = ["hjson"] }
# config = "0.11.0"
serde = "^1.0.126"
serde_derive = "^1.0.126"
serde_json = "^1.0.65"
float-cmp = "0.9.0"
rand = "^0.8.4"
histogram = "^0.6.9"
bincode = "^1.3.3"
chrono = "0.4.19"
lazy_static = "^1.4.0"
regex = "^1.5.4"
async-trait = "^0.1.50"
prometheus = { version = "^0.12.0", features = ["process"] }
# warp = "^0.3.1"
reqwest = { version = "^0.11.4", features = ["json"] } 
actix-web = "=4.0.0-beta.8"
# enum-as-inner = "^0.3.3"
base64 = "^0.13.0"

# disable zstd feature of pulsar for conflicting with actix-web, 
pulsar = { version = "^4.0.0", default-features = false, features = ["tokio-runtime", "lz4", "flate2", "snap"] } 

# specifying an exact version for pulsar, in case of building fail with nom 7.0.0-alpha2
nom = { version="=7.0.0-alpha1", default-features=false, features=["alloc"] }

# machine-uid = "0.2.0"
mac_address = "1.1.2"

tonic = "0.5.2"
prost = "0.8.0"
# num = "0.4.0"
rust-fsm = "0.6.0"
paste = "1.0.5"
once_cell = "1.8.0"
raft = {version = "0.6.0", default-features=false, features=["prost-codec", "default-logger"]}
async-raft = "0.6.1"
# async-raft = {path="/Users/simon/simon/src/study/async-raft3/async-raft/async-raft"}
# async-raft = { git = "https://github.com/simon-fu/async-raft.git", tag = "v0.6.2-alpha.16-simon-1" }
anyhow = "1.0.43"
rdkafka = "0.26.0"
log = "0.4.14"
pretty-hex = "0.2.1"

[dev-dependencies]
# criterion = "^0.3.4"
criterion = { version = "^0.3.4", features = ["async_tokio"] }

[build-dependencies]
tonic-build = "0.5.2"
prost-build = { version = "0.8.0" }